kubernetes/linkerd/force_mtls_authorization_policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: msc-linkerd-mtls-authorization-policy
  namespace: $$MSC_NAMESPACE
spec:
  targetRef:
    kind: Namespace
    name: $$MSC_NAMESPACE
  requiredAuthenticationRefs:
    - name: msc-linkerd-mesh-tls-authentication
      kind: MeshTLSAuthentication
      namespace: $$MSC_NAMESPACE
